fix: layout bugs on section for pixelperfect

--- a/styles/contacts.css
+++ b/styles/contacts.css
@@ -3,7 +3,7 @@
   display: flex;
   justify-content: center;
   padding-top: 150px;
-  padding-bottom: 150px;
+  padding-bottom: 160px;
 }
 
 .contacts-container {
