--- a/styles/header.css
+++ b/styles/header.css
@@ -18,7 +18,7 @@
 
 .nav-list {
   display: flex;
-  gap: 60px;
+  gap: 61px;
 }
 
 .nav-list__item {
