--- a/styles/services.css
+++ b/styles/services.css
@@ -6,7 +6,7 @@
 .services__title {
   color: var(--color-white);
   font-size: 18px;
-  padding-top: 0;
+  padding-top: 150px;
   padding-bottom: 34px;
 }
 
